        Class InvalidArgument, InvalidInput:
            - New exception classes.
        Class Isomorphism<dim>, IsomorphismBase<dim>:
            - Added member and global swap() functions to Isomorphism<dim>.
            - Removed the IsomorphismBase<dim> base class; all functionality
              now lives directly within Isomorphism<dim>.
            - Functions apply() and applyInPlace() now take their
              arguments by reference, not pointer, and throw exceptions in some
              cases if input requirements are not met.  Moreover, apply() now
              returns by value, not by newly allocated pointer.
        Class IsReginaArbitraryPrecisionInteger:
            - New type trait to identify Regina's arbitrary precision integer
              types.
        Class L31Pillow:
            - Routine isL31Pillow() is now called recognise(), and
              returns a std::unique_ptr instead of a raw pointer.
              The old name is kept as a deprecated alias.
            - Added copy construction and copy assignment.
            - Added member and global swap() functions.
            - Deprecated clone().  Just use the copy constructor instead.
        Class Laurent, Laurent2:
            - Added member and global swap() functions.
            - Added invertX(), and (for Laurent2 only) invertY().
            - Added operators < > <= >= to order polynomials using a
              well-defined (but unimportant) total order.
            - Added tightEncode() and tightEncoding() to help with perfect
              hashing.
        Class LayeredChain:
            - Added copy assignment operator.
            - Added member and global swap() functions.
        Class LayeredChainPair:
            - Routine isLayeredChainPair() is now called recognise(), and
              returns a std::unique_ptr instead of a raw pointer.
              The old name is kept as a deprecated alias.
            - Added copy construction and copy assignment.